<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="625dp"
        android:contentDescription="@string/obraz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drivertestapp" />

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="350dp"
        android:layout_marginBottom="575dp"
        android:contentDescription="@string/obraz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/backarrow" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="272dp"
        android:layout_height="58dp"
        android:background="@drawable/button_design"
        android:text="@string/registerLabel"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center|end"
                android:text="@string/imie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/surnameLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center|end"
                android:text="@string/nazwisko"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginLabelR"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center|end"
                android:text="@string/loginLabel"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/passLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center|end"
                android:text="@string/passwordLabel"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0dp"
                android:gravity="center|end"
                android:text="@string/repeatPass"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/sexLabel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|end"
                android:text="@string/sex"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/firstNameEdit"
                android:text="@string/empty" />

            <EditText
                android:id="@+id/surnameEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/surnameEdit"
                android:text="@string/empty" />

            <EditText
                android:id="@+id/loginEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/loginEdit"
                android:text="@string/empty" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:labelFor="@id/passEdit" />

            <EditText
                android:id="@+id/rPassEdit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:labelFor="@id/rPassEdit" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/femaleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:text="@string/female" />

                <CheckBox
                    android:id="@+id/maleCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/male" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>